<resources>
    <string name="app_name">Muslim Dream</string>

    <string name="channel_name">sk</string>
    <string name="channel_description">jfklsj</string>

    <string name="email_hint">Your Email Address</string>
    <string name="password_hint">Your Password</string>
    <string name="login_button">Login</string>
    <string name="password_forget_button">Forgot Password?</string>
    <string name="account_button">Create New Account</string>
    <string name="or_text">OR</string>
    <string name="DateOfBirth">Date of Birth(dd-mm-yyyy)</string>
    <string name="Gender">Gender(Male or Female)</string>
    <string name="Religion">Religion(Muslim,Christian etc)</string>
    <string name="Hint_Name">Name</string>
    <string name="fragmentNotification">Nothing to Show case we do not find any post. </string>
    <string name="fragmentNotificationUser">Nothing to Show case we do not find any verified user. </string>
    <string name="Notification">
        Assalamu Alaikum Every One.
        It is a Islamic Social Media.It is create For Daohyat None Muslim people.
        Here, Only post a premium member.You buy premium membership please contact me use Email address.
        So,Buy membership or any suggestion. Please contact me. My Email: sksabbirhosen420@gmail.com
    </string>
    <string name="SingUp">Sing Up</string>
    <string name="Hind_Password">Enter password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_please_wait_for_awhile">Please wait for awhile</string>
    <string name="notification_submitting_your_request">Submitting your request</string>
</resources>