<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SingUp">

    <ImageView
        android:id="@+id/close_sing_up_btn"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/buLogin"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/save_edited_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivImagePerson"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="165dp"
        android:src="@drawable/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_sing_up_btn"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/add_profile_pic_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="19dp"
        android:text="Click To Add picture"
        app:layout_constraintEnd_toEndOf="@+id/ivImagePerson"
        app:layout_constraintStart_toStartOf="@+id/ivImagePerson"
        app:layout_constraintTop_toBottomOf="@+id/ivImagePerson" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/Hint_Name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/add_profile_pic_btn"
        app:layout_constraintStart_toStartOf="@+id/add_profile_pic_btn"
        app:layout_constraintTop_toBottomOf="@+id/add_profile_pic_btn" />

    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/DateOfBirth"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/personName"
        app:layout_constraintStart_toStartOf="@+id/personName"
        app:layout_constraintTop_toBottomOf="@+id/personName" />
    <EditText
        android:id="@+id/gender_editText"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Gender"
        app:layout_constraintEnd_toEndOf="@+id/dateOfBirth"
        app:layout_constraintStart_toStartOf="@+id/dateOfBirth"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="@+id/gender_editText"
        app:layout_constraintStart_toStartOf="@+id/gender_editText"
        app:layout_constraintTop_toBottomOf="@+id/gender_editText" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Hind_Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>